@@ -1,4 +1,4 @@
-version = 0.2.0
+version = 0.2.1
 
 name    = Test-Wrapper
 author  = Yanick Champoux <yanick@cpan.org>
@@ -27,10 +27,11 @@ remote=github
 [NextRelease]
 time_zone = America/Montreal
 
+[ReadmeFromPod]
+
 [MatchManifest]
 [ManifestSkip]
 
-[ReadmeFromPod]
 
 [GatherDir]
 
@@ -49,6 +50,7 @@ time_zone = America/Montreal
 ; Release 
 [CheckChangesHasContent]
 
+[CheckExtraTests]
 [TestRelease]
 
 [ConfirmRelease]
