@@ -1,6 +1,7 @@
 Revision history for Test::Wrapper
 
 {{$NEXT}}
+    * add README to the MANIFEST so that signature is okay (RT#62772)
 
 0.2.0     2010-10-24 13:53:08 America/Montreal
     * now compatible with Test::Builder2.
